--- a/package.json
+++ b/package.json
@@ -9,19 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.3",
+    "@cloudinary/url-gen": "^1.21.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/lab": "^7.0.0-beta.14",
+    "@mui/material": "^7.2.0",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@types/nodemailer": "^6.4.17",
+    "@videojs/themes": "^1.0.1",
+    "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
+    "cloudinary-video-player": "^3.1.1",
+    "clsx": "^2.1.1",
+    "firebase": "^12.0.0",
+    "firebase-admin": "^13.4.0",
+    "lucide-react": "^0.536.0",
+    "next": "15.4.5",
+    "nodemailer": "^7.0.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.5"
+    "react-player": "^3.3.1",
+    "tailwind-merge": "^3.3.1",
+    "videojs-contrib-quality-levels": "^4.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
