--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cloudinary": "^2.7.0",
     "cloudinary-video-player": "^3.1.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
     "lucide-react": "^0.536.0",
